syntax = "proto3";

package ai.metathings.service.deviced;

import "validate/validate.proto";

import "model.proto";

message AddConfigsToDeviceRequest {
	OpDevice device = 1 [(validate.rules).message.required = true];
	repeated OpConfig configs = 2;
}
