syntax = "proto3";

package ai.metathings.service.deviced;

import "validate/validate.proto";

import "model.proto";

message CreateConfigRequest {
	OpConfig config = 1 [(validate.rules).message.required = true];
}

message CreateConfigResponse {
	Config config = 1;
}
