syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message PatchConfigRequest {
	OpConfig config = 1;
}

message PatchConfigResponse {
	Config config = 1;
}
