syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message UploadDescriptorRequest {
	OpDescriptor descriptor = 1;
}

message UploadDescriptorResponse {
	Descriptor descriptor = 1;
}
